# aegis

./: .gitignore  LICENSE  README.md  pyproject.toml
aegis/: app.py  args.py  cli.py  controller.py  genModel.py  helpers.py  llm.py  model.py
contracts/: test.sol
docs/: CODE_OF_CONDUCT.md  CodingStandards.md  contributing.md  setup.md
docs/examples/: examples.md
docs/training/: AegisModelTraining.ipynb  FinetuningLlama.md  ResNetModelTraining.md  training.md
src/: app.py  model.py
src/args/: __init__.py  compile_options.py
src/cli/: __init__.py  cli.py
src/config/: __init__.py  initialisation.py
