[tool.poetry]
name = "aegis"
version = "0.0.1a"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "args.py", from = "aegis" },
    { include = "cli.py", from = "aegis" },
    { include = "config.py", from = "aegis" },
    { include = "controller.py", from = "aegis" },
]

[tool.poetry.dependencies]
python = "^3.11"
clidantic = "^0.1.0"
pydantic = "1.10.14"
py-solc-x = "^2.0.2"
solc = "^0.0.0a0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aegis = "aegis.app:main"
