[tool.poetry]
name = "aegis"
version = "0.0.1a"
description = ""
authors = []
readme = "README.md"
packages = [
    { include = "args.py", from = "aegis" },
    { include = "cli.py", from = "aegis" },
    { include = "config.py", from = "aegis" },
    { include = "controller.py", from = "aegis" },
    { include = "helpers.py", from = "aegis" },
    { include = "model.py", from = "aegis" },
]

[tool.poetry.dependencies]
clidantic = "^0.1.0"
colorama = "^0.4.6"
datasets = "^2.16.1"
hexbytes = "^0.2.3"
python = "^3.11"
pydantic = "1.10.14"
py-solc-x = "^2.0.2"
numpy = "^1.26.3"
pyevmasm = "^0.2.3"
scikit-learn = "^1.4.0"
slither = "^0.3.0"
solc = "^0.0.0a0"
torch = "^2.2.0"
torchvision = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aegis = "aegis.app:main"
